--- a/microservicecloud-config-client.yml
+++ b/microservicecloud-config-client.yml
@@ -5,7 +5,7 @@ spring:
 ---
 server:
   port: 8201
-Spring:
+spring:
   profiles: dev
   application: 
     name: microservicecloud-config-client
@@ -16,11 +16,11 @@ eureka:
 ---
 server:
   port: 8202
-Spring:
+spring:
   profiles: test
   application: 
     name: microservicecloud-config-client
-eureka:
-  client:
-    service-url:
+eureka: 
+  client: 
+    service-url: 
       defaultZone: http://eureka-test.com:7001/eureka
