--- a/microservicecloud-config-eureka-client.yml
+++ b/microservicecloud-config-eureka-client.yml
@@ -2,27 +2,37 @@ spring:
   profiles: dev
     application: 
       name: microservicecloud-config-eureka-client
+---
+server:
+  port: 7001
 
+spring:
+  profiles: dev
+  application: 
+    name: microservicecloud-config-eureka-client
+    
 eureka:
   instance:
     hostname: eureka7001.com
   client:
-    register-with-eureka: false
-    fetch-registry: false 
+    register-with-eureka: false    #当前的eureka-server自己不注册进服务列表中
+    fetch-registry: false          #不通过eureka获取注册信息
     service-url:
       defaultZone: http://eureka7001.com:7001/eureka/
 ---
 server:
   port: 7001
 
-Spring:
+spring:
   profiles: test
   application: 
     name: microservicecloud-config-eureka-client
+    
 eureka:
-  instance: eureka7001.com
+  instance:
+    hostname: eureka7001.com
   client:
-    register-with-eureka: false
-    fetch-registry: false
+    register-with-eureka: false    #当前的eureka-server自己不注册进服务列表中
+    fetch-registry: false          #不通过eureka获取注册信息
     service-url:
       defaultZone: http://eureka7001.com:7001/eureka/
