--- a/microservicecloud-config-eureka-client.yml
+++ b/microservicecloud-config-eureka-client.yml
@@ -1,7 +1,7 @@
 spring: 
-  profiles: dev
-    application: 
-      name: microservicecloud-config-eureka-client
+  profiles: 
+    active:
+    - dev
 ---
 server:
   port: 7001
