--- a/microservicecloud-config-dept-client.yml
+++ b/microservicecloud-config-dept-client.yml
@@ -11,8 +11,8 @@ spring:
     name: microservicecloud-config-dept-client
   datasource:
      type: com.alibaba.druid.pool.DruidDataSource            # 当前数据源操作类型
-     driver-class-name: com.mysql.cj.jdbc.Driver                # mysql驱动包
-     url: jdbc:mysql://localhost:3306/clouddb03?serverTimezone=UTC&useSSL=false   # 数据库名称
+     driver-class-name: com.mysql.jdbc.Driver                # mysql驱动包
+     url: jdbc:mysql://localhost:3306/clouddb03?characterEncoding=utf8&serverTimezone=UTC&useSSL=false   # 数据库名称
      username: root
      password: 123456
      dbcp2:
@@ -24,8 +24,7 @@ spring:
 mybatis:
   config-location: classpath:mybatis/mybatis.cfg.xml        # mybatis配置文件所在路径
   type-aliases-package: com.xinyan.springcloud.entities     # 所有Entity别名类所在包
-  mapper-locations:
-  - classpath:mybatis/mapper/*Mapper.xml                    # mapper映射文件
+  mapper-locations: classpath:mybatis/mapper/*Mapper.xml    # mapper映射文件
 
 eureka:
   client:
@@ -49,8 +48,8 @@ spring:
     name: microservicecloud-config-dept-client
   datasource:
      type: com.alibaba.druid.pool.DruidDataSource            # 当前数据源操作类型
-     driver-class-name: com.mysql.cj.jdbc.Driver                # mysql驱动包
-     url: jdbc:mysql://localhost:3306/clouddb02?serverTimezone=UTC&useSSL=false   # 数据库名称
+     driver-class-name: com.mysql.jdbc.Driver                # mysql驱动包
+     url: jdbc:mysql://localhost:3306/clouddb02?characterEncoding=utf8&serverTimezone=UTC&useSSL=false   # 数据库名称
      username: root
      password: 123456
      dbcp2:
